# Offline-RAG-Chatbot-LangGraph

./: .gitignore  IMPROVEMENTS.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  cli.py  demo.py  ingestion.py  langgraph.json  main.py  pyproject.toml  quickstart.ps1  quickstart.sh  requirements.txt  start_ragbot.sh  test_chains.py  validate_structure.py
docs/: INGESTION_USAGE.txt
graph/: __init__.py  consts.py  graph.py  state.py
graph/chains/: __init__.py  answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
